@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 11, 2010</p>
+      <p>Last Updated: September 28, 2010</p>
     </td>
   </tr>
 </table>
@@ -1976,6 +1976,8 @@ nuttx-5.11 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  (see email thread: http://tech.groups.yahoo.com/group/nuttx/message/530)
 	* drivers/mtd/at45db.c - Add a driver for the Atmel AT45DB161D 4Mbit
 	  SPI FLASH part (untested on initial check-in).
+	* examples/ostest/prioinherit.c - Need to reinitialize globals if
+	  test is ran repeatedly in a loop.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
